Creating Train and Validation datasets

--- a/brain_tumor_detector.ipynb
+++ b/brain_tumor_detector.ipynb
@@ -2,23 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a014304a",
+   "execution_count": 25,
+   "id": "cea9f028",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow"
+    "import tensorflow\n",
+    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42b06fff",
+   "metadata": {},
+   "source": [
+    "# 1. Creating Train and Validation datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7277ec98",
+   "execution_count": 29,
+   "id": "3b5496e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\fonta\\\\deep_learning_projects\\\\Brain_Tumor_Detection'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ec0ddf7a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_yes, val_yes = train_test_split(os.listdir('brain_mri_images\\\\brain_tumor_dataset\\\\yes'), test_size=0.5)\n",
+    "train_no, val_no = train_test_split(os.listdir('brain_mri_images\\\\brain_tumor_dataset\\\\no'), test_size=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "009f4a87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Image_copying(src_path, src_list, dest):\n",
+    "    \n",
+    "    for image_name in src_list:\n",
+    "        shutil.copy(os.path.join(src_path, image_name), dest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1a5b91c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image_copying('brain_mri_images\\\\brain_tumor_dataset\\\\yes', train_yes, 'C:\\\\Users\\\\fonta\\\\deep_learning_projects\\\\Brain_Tumor_Detection\\\\brain_mri_images\\\\train\\\\yes')\n",
+    "Image_copying('brain_mri_images\\\\brain_tumor_dataset\\\\yes', val_yes, 'C:\\\\Users\\\\fonta\\\\deep_learning_projects\\\\Brain_Tumor_Detection\\\\brain_mri_images\\\\validation\\\\yes')\n",
+    "Image_copying('brain_mri_images\\\\brain_tumor_dataset\\\\no', train_no, 'C:\\\\Users\\\\fonta\\\\deep_learning_projects\\\\Brain_Tumor_Detection\\\\brain_mri_images\\\\train\\\\no')\n",
+    "Image_copying('brain_mri_images\\\\brain_tumor_dataset\\\\no', val_no, 'C:\\\\Users\\\\fonta\\\\deep_learning_projects\\\\Brain_Tumor_Detection\\\\brain_mri_images\\\\validation\\\\no')"
+   ]
   }
  ],
  "metadata": {
